5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1850_1278.log
== TEST (2019-06-26 23:36:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')
c2 = input('digite a cidade 2: ')
matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0

while(c1 != -1):
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + mz[i,j]
	c1 = input('digite a cidade 1: ')
	c2 = input('digite a cidade 2: ')
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:36:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')
c2 = input('digite a cidade 2: ')
matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0

while(c1 != -1):
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	c1 = input('digite a cidade 1: ')
	c2 = input('digite a cidade 2: ')
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:39:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0

while(c1 != -1):
	c1 = input('digite a cidade 1: ')
	c2 = input('digite a cidade 2: ')
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:39:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
c1 = 0
c2 = 0
while(c1 != -1):
	c1 = input('digite a cidade 1: ')
	c2 = input('digite a cidade 2: ')
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:40:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
c1 = 0
c2 = 0
while(c1 != -1):
	c1 = input('digite a cidade 1: ')
	c2 = input('digite a cidade 2: ')
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:40:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
c1 = 0
c2 = 0
while(c1 != -1):
	c1 = input('digite a cidade 1: ')
	c2 = input('digite a cidade 2: ')
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:41:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
c1 = 0
c2 = 0
while(c1 != -1):
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	c2 = input('digite a cidade 2: ')
	c1 = input('digite a cidade 1: ')
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:41:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
c1 = 0
c2 = 0
while(c1 != -1):
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	c2 = input('digite a cidade 2: ')
	c1 = input('digite a cidade 1: ')
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:41:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
c1 = 0
c2 = 0
while(c1 != -1):
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	c2 = input('digite a cidade 2: ')
	c1 = input('digite a cidade 1: ')
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:41:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
c1 = 0
c2 = 0
while(c1 != -1):
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	c2 = input('digite a cidade 2: ')
	c1 = input('digite a cidade 1: ')
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:43:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')
c2 = input('digite a cidade 2: ')
matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
c1 = 0
c2 = 0
while(c1 != -1):
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	c1 = input(digite novamente: )
print(s)
	
	
-- ERROR:
File "XXXX", line 19
    c1 = input(digite novamente: )
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:43:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')
c2 = input('digite a cidade 2: ')
matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
c1 = 0
c2 = 0
while(c1 != -1):
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	c1 = input('digite novamente: ')
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:44:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')
c2 = input('digite a cidade 2: ')
matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
while(c1 != -1):
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	c1 = input('digite novamente: ')
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:45:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')
c2 = input('digite a cidade 2: ')
matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
while(int(c1) != -1):
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	c1 = input("digite novamente: ")
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:46:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')
c2 = input('digite a cidade 2: ')
matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
while(int(c1) != -1):
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	c1 = input("digite novamente: ")
	c2 = input("digite a cidade 2 novamente: ")
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:47:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')
c2 = input('digite a cidade 2: ')
matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
while(int(c1) != -1):
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
	c1 = input("digite novamente: ")
	c2 = input("digite a cidade 2 novamente: ")
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:48:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
while(int(c1) != -1):
	c1 = input('digite a cidade 1: ')
	c2 = input('digite a cidade 2: ')
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 23:48:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
s = 0
c1 = 0
c2 = 0
while(int(c1) != -1):
	c1 = input('digite a cidade 1: ')
	c2 = input('digite a cidade 2: ')
	i = int(c1[0]) - 1
	j = int(c2[0]) - 1
	s = s + matr[i,j]
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 18:47:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])


t = 0
while(c1 != -1):
	i = int(c1[0]) - 1
	c1 = input('digite novamente: ')
	j = int(c1[0]) - 1
	t = t + matr[i,j]
	c1 = input('digite novamente: ')
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 18:48:14) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])


t = 0
while(c1 != "-1"):
	i = int(c1[0]) - 1
	c1 = input('digite novamente: ')
	j = int(c1[0]) - 1
	t = t + matr[i,j]
	c1 = input('digite novamente: ')
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 18:48:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])


t = 0
while(c1 != "-1"):
	i = int(c1[0]) - 1
	c1 = input('digite novamente: ')
	j = int(c1[0]) - 1
	t = t + matr[i,j]
	c1 = input('digite novamente: ')
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 18:50:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])


t = 0
while(c1 != "-1"):
	if(c1 != "-1"):
		i = int(c1[0]) - 1
		c1 = input('digite novamente: ')
		j = int(c1[0]) - 1
		t = t + matr[i,j]
		c1 = input('digite novamente: ')
	else:
		c1 = input('digite novamente: ')
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 18:55:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])


t = 0
while(c1 != "-1"):
	i = int(c1[0]) - 1	
	c1 = input('digite novamente: ')
	if(c1 != -1):
		j = int(c1[0]) - 1
		t = t + matr[i,j]
		c1 = input('digite novamente: ')
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 18:56:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])


t = 0
while(c1 != "-1"):
	i = int(c1[0]) - 1	
	c1 = input('digite novamente: ')
	if(c1 != "-1"):
		j = int(c1[0]) - 1
		t = t + matr[i,j]
		c1 = input('digite novamente: ')
	else: 
		print(t)
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 18:56:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])


t = 0
while(c1 != "-1"):
	i = int(c1[0]) - 1	
	c1 = input('digite novamente: ')
	if(c1 != "-1"):
		j = int(c1[0]) - 1
		t = t + matr[i,j]
		c1 = input('digite novamente: ')
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 18:57:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])


t = 0
while(c1 != "-1"):
	i = int(c1[0]) - 1	
	c1 = input('digite novamente: ')
	if(c1 != "-1"):
		j = int(c1[0]) - 1
		t = t + matr[i,j]
		c1 = input('digite novamente: ')
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:22:14) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])


t = 0
while(c1 != "-1"):
	if(i != j):
		i = int(c1[0]) - 1
		c1 = input('digite novamente: ')
	if(c1 != "-1"):
		j = int(c1[0]) - 1
		t = t + matr[i,j]
		c1 = input('digite novamente: ')
		i = j
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:22:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])


t = 0
i = 0
j = 1
while(c1 != "-1"):
	if(i != j):
		i = int(c1[0]) - 1
		c1 = input('digite novamente: ')
	if(c1 != "-1"):
		j = int(c1[0]) - 1
		t = t + matr[i,j]
		c1 = input('digite novamente: ')
		i = j
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:22:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])


t = 0
i = 0
j = 1
while(c1 != "-1"):
	if(i != j):
		i = int(c1[0]) - 1
		c1 = input('digite novamente: ')
	if(c1 != "-1"):
		j = int(c1[0]) - 1
		t = t + matr[i,j]
		c1 = input('digite novamente: ')
		i = j
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:23:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])


t = 0
i = 0
j = 1
while(c1 != "-1"):
	if(i != j):
		i = int(c1[0]) - 1
		c1 = input('digite novamente: ')
	if(c1 != "-1"):
		j = int(c1[0]) - 1
		t = t + matr[i,j]
		c1 = input('digite novamente: ')
		i = j
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 19:23:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input('digite a cidade 1: ')

matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])


t = 0
i = 0
j = 1
while(c1 != "-1"):
	if(i != j):
		i = int(c1[0]) - 1
		c1 = input('digite novamente: ')
	if(c1 != "-1"):
		j = int(c1[0]) - 1
		t = t + matr[i,j]
		c1 = input('digite novamente: ')
		i = j
print(t)	
-- EXECUTION TIME:
1.11038
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
